# project2_Shchebetovskii_M25-555

./: .gitignore  README.md  pyproject.toml
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  parser.py  utils.py
