[tool.poetry]
name = "project2_Shchebetovskii_M25-555"
version = "0.1.0"
description = "Примитивная база данных"
authors = [
    "Shchebetovskiy V.A. M25-555"
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
prompt = "0.4.1"
prettytable = "^3.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[tool.poetry.scripts]
project = "src.primitive_db.main:run"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"